--- a/packages/client/app.json
+++ b/packages/client/app.json
@@ -2,10 +2,10 @@
   "expo": {
     "name": "client",
     "slug": "client",
+    "scheme": "client",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
