feat add hadith to client, s3 to server, upload quran

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -8,6 +8,8 @@
       ]
     },
     "jsx": "react-jsx", 
+    "typeRoots": ["./node_modules/@types", "./env.d.ts"],
+    "types": ["react-native", "node"],
     "lib": ["dom", "esnext"]
   },
   "include": [
