--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,6 +35,7 @@
     "@nestjs/websockets": "^11.0.10",
     "@prisma/client": "6.3.1",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cache-manager": "^6.4.1",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
