--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
+    "@epubjs-react-native/core": "^1.4.7",
+    "@epubjs-react-native/expo-file-system": "^1.1.4",
     "@expo/vector-icons": "^14.0.4",
     "@nestjs/platform-fastify": "^11.0.11",
-    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.2",
     "@react-navigation/material-top-tabs": "^7.1.1",
@@ -29,13 +31,13 @@
     "@tanstack/react-query-devtools": "^5.67.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.35",
+    "expo": "^52.0.37",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.6",
-    "expo-font": "~13.0.3",
+    "expo-constants": "~17.0.7",
+    "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
+    "expo-router": "^4.0.17",
     "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -48,12 +50,13 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "^15.8.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
